<resources>
    <string name="app_name">Dental Gold for Staff</string>
    <string name="OK">Chọn</string>
    <string name="Cancel">Hủy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tên Người Dùng</string>
    <string name="nav_header_subtitle">Số Điện Thoại</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="waiting_msg">Xin vui lòng chờ...</string>
    <string name="dialog_cancel">Bạn đã hủy</string>
    <string name="dialog_default_title">Thông báo</string>
    <string name="prompt_phone">Số Điện Thoại</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật Khẩu</string>
    <string name="action_sign_in"></string>
    <string name="action_register">Đăng Ký</string>
    <string name="action_sign_in_short">Đăng Nhập</string>
    <string name="error_invalid_email">Email không đúng</string>
    <string name="error_incorrect_password">Mật khẩu không đúng</string>
    <string name="error_field_required">Vui lòng nhập vào</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout_titile">Đăng Xuất</string>
    <string name="new_fragment_title">Tin Tức</string>
    <string name="dental_fragment_title">Dịch Vụ</string>
    <string name="appointment_fragment_title">Đặt Lịch</string>
    <string name="promotion_fragment_title">Khuyến Mãi</string>
    <string name="history_treatment_fragment_title">Điều Trị</string>
    <string name="history_payment_fragment_title">Chi Trả</string>
    <string name="my_accout_fragment_title">Thông Tin Tài Khoản</string>
    <string name="treatment_detail_title_activity">Lộ Trình Chi Tiết</string>
    <string name="news_tab_title">Tin Tức</string>
    <string name="promotion_tab_titile">Khuyến Mãi</string>
    <string name="history_appointment_title">Lịch Đặt</string>
    <string name="histrory_fragment_title">Lịch Sử Điều Trị</string>
    <string name="text_make_quickly_appointment">Đặt Lịch Khám</string>
    <string name="tv_book_appt">Đặt lịch nhanh</string>
    <string name="tv_promt_fullname">Họ và tên</string>
    <string name="tv_email">Email</string>
    <string name="tv_degree">Trình Độ</string>
    <string name="tv_promt_phone">Số điện thoại</string>
    <string name="tv_promt_content">Nội dung</string>
    <string name="btn_book_appt">Đặt Lịch</string>
    <string name="label_password_promt">Nhập mật khẩu mới</string>
    <string name="label_password">Mật khẩu</string>
    <string name="label_current_password_promt">Nhập mật khẩu hiện tại</string>
    <string name="label_confirm_password_promt">Nhập lại mật khẩu</string>
    <string name="label_button_login">Đăng nhập</string>
    <string name="label_suggest_register">Bạn chưa có tài khoản? Đăng kí tại đây</string>
    <string name="label_suggest_book_appt">Đặt lịch hẹn nhanh</string>
    <string name="label_error_appnt_date">Ngày đặt không hợp lệ</string>
    <string name="label_title_book_appt">Đặt lịch khám nhanh</string>
    <string name="label_fullname_book_appt">Họ và tên</string>
    <string name="label_phone_book_appt">Số điện thoại</string>
    <string name="label_date_book_appt">Ngày đặt</string>
    <string name="label_time_book_appt">Giờ đặt</string>
    <string name="label_content_book_appt">Ghi chú điều trị</string>
    <string name="label_button_book_appt">Đặt lịch</string>
    <string name="label_birthday_book_appt">Ngày đặt</string>
    <string name="drawer_item_persistent_compact_header1">Ngày đặt</string>
    <string name="label_birthday_register">Ngày sinh</string>
    <string name="label_address_book_appt">Địa chỉ</string>
    <string name="label_button_register">Đăng kí</string>
    <string name="label_button_update">Cập Nhật</string>
    <string name="label_button_change_password">Đổi mật khẩu</string>
    <string name="label_button_change_phone">Đổi số điện thoại</string>
    <string name="error_">Đăng kí</string>
    <string name="label_error_birthday">Ngày sinh không hợp lệ</string>
    <string name="current_unit">đ</string>
    <string name="percent">%</string>
    <string name="status_not_done">Chưa Hoàn Thành</string>
    <string name="status_done">Hoàn Thành</string>
    <string name="status_cancle">Hủy</string>
    <string name="account_nav_bar_title">Tài Khoản</string>
    <string name="error_invalid_phone">Số điện thoại không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_password">Mật khẩu không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_confirm_password">Mật khẩu nhập lại không hợp lệ</string>
    <string name="error_invalid_name">Tên không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_email2">Email không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_degree">Trình độ không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_address">Địa chỉ không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_on_error_when_call_api">Lỗi đường truyền, vui lòng thử lại</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_detail">Tin Tức</string>
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>
    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="my_acc_phone_label">Số điện thoại</string>
    <string name="my_acc_password_label">Mật khẩu</string>
    <string name="my_acc_password_text_view">**********</string>
    <string name="my_acc_gender_label">Giới tính</string>
    <string name="my_acc_address_label">Địa chỉ</string>
    <string name="my_acc_birthday_label">Ngày sinh</string>
    <string name="my_acc_degree_label">Chức Vụ</string>
    <string name="my_acc_email_label">Email</string>
    <string name="my_acc_edit_button">Chỉnh sửa tài khoản</string>
    <string name="my_acc_edit_treatment_detail">Chỉnh sửa</string>
    <string name="my_acc_district_text">Quận</string>
    <string name="my_acc_city_text">Thành phố</string>
    <string name="edit_acc_title">Chỉnh sửa tài khoản</string>
    <string name="edit_acc_update_button">Cập nhật</string>
    <string name="edit_pass_title">Chỉnh sửa mật khẩu</string>
    <string name="edit_pass_button">Cập nhật</string>
    <string name="label_content_feedback">Góp ý</string>
    <string name="label_question_feedback">Bạn thấy dịch vụ của chúng tôi như thế nào?</string>
    <string name="error_message_api">Có vẻ như đã có lỗi xảy ra, vui lòng thử lại.</string>
    <string name="success_message_api">Cập nhật thành công</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_patient_titie">Tìm Kiếm Bệnh Nhân</string>
    <string name="history_work_title">Lịch Hẹn</string>
    <string name="appointment_title">Khám Bệnh</string>
    <string name="appointment_title_2">Nhận Bệnh</string>
    <string name="absent_title">Nghỉ Phép</string>
    <string name="chart_title">Biểu Đồ Khám Bệnh</string>
    <string name="bar_chart_title">Biểu Đồ Doanh Thu</string>
    <string name="line_chart_title">Doanh Thu</string>
    <string name="action_today">Hôm nay</string>
    <string name="action_day_view">Xem ngày</string>
    <string name="action_three_day_view">Xem 3 ngày</string>
    <string name="action_week_view">Xem tuần</string>
    <string name="async_error">Không thể tải dữ liệu</string>
    <string name="search_patient_title">Tìm Kiếm Bệnh Nhân</string>
    <string name="search_phone_hint">Nhập số điện thoại</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="label_date_picker">Lý do</string>
    <string name="str_all_selected">Tất cả trạng thái</string>
    <string name="button_choose_dialog">Chọn</string>
    <string name="button_cancel_dialog">Hủy</string>
    <string name="label_money">Số tiền</string>
    <string name="label_patient_apppointment">Bệnh nhân này có: %1$d lịch hẹn trong ngày hôm nay</string>
    <string-array name="status">
        <item>Mới</item>
        <item>Sẵn Sàng</item>
        <item>Đang Khám</item>
        <item>Hoàn Thành</item>
    </string-array>
</resources>