<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context="com.dentalclinic.capstone.activities.book_apptActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<ImageView-->
                <!--android:id="@+id/img_logo_quick_register"-->
                <!--android:layout_width="130dp"-->
                <!--android:layout_height="130dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:focusable="true"-->
                <!--android:focusableInTouchMode="true"-->
                <!--android:src="@drawable/dental_icon" />-->

                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/label_title_book_appt"-->
                <!--android:textSize="24sp"-->
                <!--android:textColor="@color/color_black"-->
                <!--android:layout_marginTop="20dp"-->
                <!--/>-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_top"
                    android:paddingTop="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/tv_fullname_book_appt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_account_circle_black_24dp"
                        android:hint="@string/label_fullname_book_appt"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/input_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_top">

                    <AutoCompleteTextView
                        android:id="@+id/tv_phone_book_appt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
                        android:hint="@string/label_phone_book_appt"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/input_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_top"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/tv_date_book_appt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:clickable="true"
                        android:drawablePadding="9dp"
                        android:drawableStart="@drawable/ic_date_range_black_24dp"
                        android:focusable="true"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/label_date_book_appt"
                        android:textColor="@color/color_blue_grey_300"
                        android:textSize="@dimen/input_size_normal" />

                    <TextView
                        android:id="@+id/tv_date_error_book_appt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:clickable="true"
                        android:drawablePadding="9dp"
                        android:focusable="true"
                        android:textColor="@color/color_red_500"
                        android:textSize="11sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/color_grey_600" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_top">

                    <AutoCompleteTextView
                        android:id="@+id/tv_estimated_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_access_time_black_24dp"
                        android:hint="Thời gian ước tính"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/input_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_top"
                    android:paddingTop="10dp">

                    <AutoCompleteTextView
                        android:id="@+id/comtv_content_book_appt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|left"
                        android:drawablePadding="9dp"
                        android:drawableStart="@drawable/ic_event_note_black_24dp"
                        android:hint="@string/label_content_book_appt"
                        android:imeActionLabel="@string/label_button_book_appt"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:maxLength="2000"
                        android:maxLines="6"
                        android:minLines="4"
                        android:paddingEnd="6dp"
                        android:paddingStart="6dp"
                        android:singleLine="true"
                        android:textSize="@dimen/input_size_normal" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_book_appt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/custom_button_blue"
                    android:layout_marginTop="30dp"
                    android:text="@string/label_button_book_appt" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>